feat: place order api done, respective table, swagger updated and rollback for place order also added
